...
    "dayLog.lh.negative": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Negative"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Âm tính"
...
    "profile.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Profile"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Cá nhân"
...
